mutualnamespacetrust/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    trust: mutual
---
apiVersion: v1
kind: Namespace
metadata:
  name: ledger
  labels:
    trust: mutual
