mutualnamespacetrust/ledger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-app
  namespace: ledger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger
  template:
    metadata:
      labels:
        app: ledger
        role: trusted
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
