mutualnamespacetrust/paymentapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-app
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
        role: trusted
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
