mutualnamespacetrust/service.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: payments
spec:
  selector:
    app: payments
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: ledger
spec:
  selector:
    app: ledger
  ports:
    - port: 80
      targetPort: 80
